--- a/springbatch-app/src/main/resources/application.yaml
+++ b/springbatch-app/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  batch:
+    initialize-schema: ALWAYS
   data:
     mongodb:
       uri: mongodb://admin:admin123@localhost:27017/contacts
@@ -9,3 +11,4 @@ spring:
     url: jdbc:mysql://localhost:3306/contacts
     username: admin
     password: admin123
+    driver-class-name: com.mysql.cj.jdbc.Driver
